kubernetes/app/glance/glance/deployment.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name glance
  annotations:
    reloader.stakater.com/auto: "true"
    glance/icon: si:glance
spec:
  template:
    metadata:
      name: *name
    spec:
      containers:
        - name: *name
          image: glanceapp/glance:v0.8.4
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: &config-map glance-config-config-map
              mountPath: /app/config/glance.yml
              subPath: glance.yml
              readOnly: true
            - name: &secret glance-config-secret
              mountPath: /app/config/auth.yml
              subPath: auth.yml
              readOnly: true
            - name: &assets glance-assets
              mountPath: /app/assets/
          startupProbe: &health
            httpGet:
              path: /api/healthz
              port: 8080
            periodSeconds: 5
            failureThreshold: 10
          readinessProbe:
            <<: *health
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            <<: *health
            periodSeconds: 10
            failureThreshold: 3
      volumes:
        - name: *config-map
          configMap:
            name: *config-map
            defaultMode: 0444
        - name: *secret
          secret:
            secretName: *secret
            defaultMode: 0444
        - name: *assets
          persistentVolumeClaim:
            claimName: *assets
  selector: {}
