kubernetes/app/glance/glance/https.httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance-https
spec:
  parentRefs:
    - &gateway
      name: default
      sectionName: https
      namespace: gateway
    - <<: *gateway
      sectionName: https-wildcard
    - <<: *gateway
      sectionName: https-local
    - <<: *gateway
      sectionName: https-wildcard-local
  hostnames:
    - ${PUBLIC_DOMAIN}
    - ${LOCAL_DOMAIN}
    - glance.${PUBLIC_DOMAIN}
    - glance.${LOCAL_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: glance
          port: 8080
